--- a/src/Application/Elsaftware.Application.csproj
+++ b/src/Application/Elsaftware.Application.csproj
@@ -5,5 +5,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
+ <ItemGroup>
+    <ProjectReference Include="..\Shared\Elsaftware.Shared.csproj" />
+    <ProjectReference Include="..\Shared\Elsaftware.Domain.csproj" />
+  </ItemGroup>
 </Project>
