--- a/src/Client/Elsaftware.Client.csproj
+++ b/src/Client/Elsaftware.Client.csproj
@@ -19,5 +19,7 @@
   <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
   </ItemGroup>
-
+ <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="npm run build:css" />
+  </Target>
 </Project>
